@@ -6,6 +6,8 @@ Collabtive 3.0.1
 + Correctly display timetracker and projects block in a users own profile
 + Fix user profiles when not logged in as admin
 + Fix changing the role of an existing user that already had a role assigned.
++ use a global HTMLPurifier object in getArrayVal() instead of creating a new one for each variable. this should improve performance by creating a
+much fewer objects.
 
 Collabtive 3.0
 + All external library dependencies now live in /vendor/ and are managed using composer.
